conformance/1.0.0/expected/errors/unclosed-span-binding.cdx
<ExpectedError category=~syntax reason=~gloss-syn-unclosed-span-binding/>
